--- a/myboys/Makefile
+++ b/myboys/Makefile
@@ -59,6 +59,10 @@ rotate: build/rotate.o
 	@mkdir -p bin
 	@echo " $(CC) $^ -o bin/rotate $(LIB)"; $(CC) $^ -o bin/rotate $(LIB)
 
+cull_face: build/cull_face.o
+	@mkdir -p bin
+	@echo " $(CC) $^ -o bin/cull_face $(LIB)"; $(CC) $^ -o bin/cull_face $(LIB)
+
 # bin/sample01: sample01.cpp fwplayer.cpp
 #	@echo " Linking..."
 #	@echo " $(CC) $^ -o $(TARGET) $(LIB)"; $(CC) $^ -o $(TARGET) $(LIB)
