--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ build
 lib/*
 
 # Ignore any executables
-bin/*
+bin
 
 # Ignore Mac specific files
 .DS_Store
@@ -12,3 +12,21 @@ processing/**/rec/*
 .mov
 .tif
 *.mov
+
+# Xcode (from gitignore.io)
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xccheckout
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
+*.xcuserstate
