--- a/myboys/WavePlane01/WavePlane01.vcxproj.filters
+++ b/myboys/WavePlane01/WavePlane01.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="sample01.cpp">
+    <ClCompile Include="wave_plane01.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
