--- a/myboys/BezierProcessingMethod/BezierProcessingMethod.vcxproj
+++ b/myboys/BezierProcessingMethod/BezierProcessingMethod.vcxproj
@@ -19,13 +19,14 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="sample01.cpp" />
+    <ClCompile Include="bezier_processing_method.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{23F24264-52B0-4D4D-81D7-C0D23E43C86C}</ProjectGuid>
+    <ProjectGuid>{CA26C9B0-EBE8-4B50-8FC4-FD5CA8A7D3CF}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>Sample01</RootNamespace>
+    <RootNamespace>BezierProcessingMethod</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <ProjectName>BezierProcessingMethod</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
