--- a/myboys/BezierProcessingMethod/BezierProcessingMethod.vcxproj.filters
+++ b/myboys/BezierProcessingMethod/BezierProcessingMethod.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="sample01.cpp">
+    <ClCompile Include="bezier_processing_method.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
